--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     // when valid
 
                     let list = document.createElement("li");
-                    taskList.prepend(list);
+                    taskList.appendChild(list);
                     // create li element
 
                     let button = document.createElement("button");
