--- a/index.html
+++ b/index.html
@@ -2,57 +2,69 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-         <meta name="description" content="Todo App List" />
-        <link rel="stylesheet" href="style.css">
-        <title>Todo app</title>
+        <meta
+            name="viewport"
+            container="width=device-width, initial-scale=1.0"
+        />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <title>to do app</title>
     </head>
     <body>
-        <div class="container">
-            <div class="form">
-                <input type="text" class="input" placeholder="Enter your Todo"/>
-                <input type="submit" value="add-task" class="add" />
-            </div>
-            <ul class="tasks">
-            </ul>
-        </div>
-
         <script>
-            let taskList = document.querySelector(".tasks");
-            let input = document.querySelector(".input");
-            let btn = document.querySelector(".add");
-            let counter = 1;
+            let container = document.createElement("div");
+            container.className = "container";
 
-            btn.addEventListener("click", (event) => {
-                let valid = false;
+            let header = document.createElement("header");
+            let todoInput = document.createElement("input");
+            todoInput.type = "text";
+            todoInput.className = "game";
+            todoInput.id = "todoInput";
+            todoInput.placeholder = "Enter your next task";
+            let addBtn = document.createElement("button");
+            addBtn.textContent = "➕";
+            addBtn.className = "add game";
 
-                if (input.value.trim() !== "") {
-                    valid = true;
-                    // when valid
+            document.documentElement.append(container);
+            container.append(header);
+            header.append(todoInput);
+            header.append(addBtn);
 
-                    let list = document.createElement("li");
-                    taskList.appendChild(list);
-                    // create li element
+            let content = document.createElement("ul");
+            container.append(content);
 
-                    let button = document.createElement("button");
-                    button.textContent = "Delete";
-                    // create a delete button
+            window.onload = () => {
+                todoInput.focus();
+            };
 
-                    list.textContent = ` ${counter++}- ${input.value} `;
-                    list.appendChild(button);
-                    // appending button before changing list text will override btn appending
+            addBtn.addEventListener("click", (e) => {
+                let validInput = false;
 
-                    input.value = "";
-                    // reset input field
+                if (todoInput.value !== "") {
+                    header.style.margin = "0 0 20px 0";
+                    let task = document.createElement("li");
+                    content.append(task);
+                    let taskP = document.createElement("p");
+                    task.append(taskP);
+                    taskP.className = "game";
+                    taskP.textContent =
+                        todoInput.value.split("")[0].toUpperCase() +
+                        todoInput.value.split("").slice(1).join("");
+                    let delBtn = document.createElement("button");
+                    task.append(delBtn);
+                    delBtn.className = "game";
+                    delBtn.textContent = "❌";
 
-                    button.addEventListener("click", () => {
-                        list.remove();
+                    todoInput.value = "";
+                    todoInput.focus();
+                    validInput = true;
+
+                    delBtn.addEventListener("click", () => {
+                        task.remove();
                     });
-                    // remove the list
                 }
-                if (!valid) {
-                    event.preventDefault();
-                    // if empty disable button submit
+
+                if (validInput === false) {
+                    e.preventDefault();
                 }
             });
         </script>
