--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            container="width=device-width, initial-scale=1.0"
-        />
+        <meta name="viewport" container="width=device-width, initial-scale=1.0"/>
+        <meta name="description" content="to do app">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <title>to do app</title>
     </head>
